--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "bignumber": "^1.1.0",
     "ethereumjs-testrpc": "^4.1.3",
+    "pad": "^1.1.0",
     "sha.js": "^2.4.9",
     "solc": "^0.4.17",
     "truffle": "^3.4.11",
