--- a/package.json
+++ b/package.json
@@ -1,4 +1,7 @@
 {
+  "scripts": {
+    "test": "truffle test"
+  },
   "dependencies": {
     "bignumber": "^1.1.0",
     "ethereumjs-testrpc": "^4.1.3",
