--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "sha.js": "^2.4.9",
     "solc": "^0.4.17",
     "truffle": "^3.4.11",
-    "web3": "1.0.0-beta.20"
+    "web3": "1.0.0-beta.20",
+    "zeppelin-solidity": "^1.3.0"
   }
 }
